@@ -2,9 +2,10 @@ Version 1.5.8+svn:
  * Graphics:
    * Removed the black background from some remaining old portraits
    * New portrait for Dwarf Thunderer, Dwarf Dragonguard.
-
  * Language and i18n:
    * updated translations: Chinese (Traditional), Hungarian, Slovak
+ * User interface:
+   * Hide the "Network Player" option for Local MP Games (bug #12596).
 
 Version 1.5.8:
  * Campaigns:
